--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
         animation: scan 2s cubic-bezier(0.4, 0, 0.2, 1) infinite;
       }
 
+      /* NEW: Soft float animation for logo */
+      @keyframes float {
+        0% { transform: translateY(0px); }
+        50% { transform: translateY(-6px); }
+        100% { transform: translateY(0px); }
+      }
+      .animate-float {
+        animation: float 4s ease-in-out infinite;
+      }
+
       /* PRINT STYLES GLOBAL */
       @media print {
         @page {
