feat: Add organization structure management and running text
Introduces a new `OrganizationStructure` type and a corresponding Google Sheet for managing organizational charts.
Adds a `runningText` field to `SchoolProfileData` and integrates it into the `App.tsx` component to display a scrolling announcement on the dashboard.
Updates `ClassroomAdmin.tsx` to include a new tab for displaying the organization chart.
Enhances `types.ts` with the new `OrganizationStructure` interface and includes `teacherNotes` in `Student` type.
Adds `SupportDocument` interface definition and `developerInfo` and `headmasterSignature` to `SchoolProfileData`.
The `code.gs` file is updated to include `STRUKTUR` in the `SHEETS` enum and update the `STUDENTS` sheet headers to include `teacherNotes`.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
         animation: slide-right-left 3s ease-in-out infinite 1s; /* Start after 1s delay */
       }
 
+      /* NEW: Running Text Animation */
+      @keyframes marquee {
+        from { transform: translateX(100%); }
+        to { transform: translateX(-100%); }
+      }
+      .animate-marquee {
+        animation: marquee 15s linear infinite;
+      }
+
 
       /* PRINT STYLES GLOBAL */
       @media print {
